turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:9: error: value update is not a member of java.awt.Color
	getCouleur() = Color.red
        ^Source:11: error: value update is not a member of java.awt.Color
	getCouleur() = Color.yellow
        ^Source:13: error: value update is not a member of java.awt.Color
	getCouleur() =  Color .magenta
        ^