turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
def quartdeCercle() { 
for (k<-1 to 90) {
	avance(100)
	recule(100)
	droite(1)}}
	quartdeCercle()
	getCouleur() = Color.red
	quartdeCercle()
	getCouleur() = Color.yellow
	quartdeCercle()
	getCouleur() =  Color .magenta
	quartdeCercle()	
}
